--- a/index.html
+++ b/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>CSS Box Styling</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class= "large-font">Word Guess Game</div>
-      <button class="start-button">Start</button>
-    </header>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="style.css">
 
-    <main>
-      <section>
-        <div class="card word-guess">
-          <div class="large-font word-blanks">J _ v _ S c r_ _t</div>
-        </div>
-      </section>
+    <title>MoodyFoody</title>
 
-      <section>
-        <div class="card results">
-          <div class = "win-loss-container">
-          <div>
-          <h2>Wins: <span class="win">0 </span> </h2>
-          <h2>Losses: <span class="lose">0</span></h2>
+</head>
+<body>
+    <div class="center container">
+            <h1> MoodyFoody </h1>
+    </div>
+    <!-- Add container for logo at later time-->
+    <div class= "center-align container">
+        <div class="col s1">
+            <form class= "center-block container" action="results.html">
+                <!-- form heading -->
+                <div class= "col ">
+                    <h3> Find your Perfect Resturant</h3>
+                    <h5> fill out this quick survey to find your ideal resturant </h5>
+                </div>
+                <!-- auto complete form-->
+                    <div class="input-field col s1" ID="location">
+                        <input placeholder="LOCATION" id="locationInput" type="text" class="validate"> </input>
+                        <!-- <label class="active" for="locationInput">LOCATION</label> -->
+                    </div>
+                <!-- inclue javascript to appear # for range finder-->
+                <div class="range-field" ID="priceRange">
+                    <label class="active" for="priceRangeInput">PRICE RANGE</label>
+                    <input type="range" id="priceRangeInput" min="$" max="$$$$" />
+                </div>
+                                <!-- inclue javascript to appear # for range finder-->
+                <div class="range-field" ID="distance">
+                    <label class="active" for="distanceInput">DISTANCE</label>
+                    <input type="range" id="distanceInput" min="1" max="20"/>
+                </div>
+                <div class="col s1" ID="resturantType">
+                    <select class="browser-default" id="foodTypeInput">
+                    <option value="" disabled selected> RESTURANT TYPE</option>
+                    <option value="1">Sitdown</option>
+                    <option value="2">Takeaway</option>
+                </div>
+                <!-- auto complete form-->
+                <div class="input-field col s1" ID="foodGenre">
+                    <label class="active" for="foodTypeInput"> </label>
+                    <input placeholder="GENRE" id="foodTypeInput" type="text" class="validate"></input>
+                </div>
+                <div class="col s1" ID="time">
+                    <select class="browser-default" id="timeInput">
+                    <option value="" disabled selected> WHEN</option>
+                    <option value="1">Right Now</option>
+                    <option value="2">Breakfast</option>
+                    <option value="3">Lunch</option>
+                    <option value="4">Dinner</option>
+                </div>
+                <div>
+                    <input class="btn" ID="submitBtn" type="submit" name="action"> </input>
+                </div>
+            </form>
         </div>
-          <button class="reset-button">Reset Score</button>
-      </div>
-          <div class= "card timer">
-            <div class = "timer-text">
-            <div class="large-font timer-count">10</div>
-            <h3>seconds remaining</h3>
-          </div>
-        
-          </div>
-        </div>
-      </section>
-    </main>
-    <script src="script.js"></script>
-  </body>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
 </html>
