--- a/results.html
+++ b/results.html
@@ -19,7 +19,7 @@
                     -left-float img 
                     - row-container: h1 element/heart btn - display block h6, p, stars, 
                 2. flex-container colum: Google map -- div with id=Map is the container where the map will load-->
-    <div class= "main-container">
+    <div class= "main-container"> <!--Materialize to build???!!!!!!!!!!!!!!!!!!-->
                 <div id="results-container" class="flex-column">
                     <div class="result-box">Result 1</div>
                     <div class="result-box">Result 2</div>
